samples/express/views/errors/circular-include-b.njk
{% include "errors/circular-include-a.njk" %}
